--- a/KinectarGame/KinectarGame.vcxproj
+++ b/KinectarGame/KinectarGame.vcxproj
@@ -162,7 +162,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="Kinectar\Guitar.cpp" />
+    <ClCompile Include="Kinectar\Kinectar.cpp" />
+    <ClCompile Include="Kinectar\KinectManager.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Title.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
@@ -275,6 +282,13 @@
   </ItemGroup>
   <ItemGroup>
     <Font Include="Example\YomogiFont.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GameData.h" />
+    <ClInclude Include="GameManager.h" />
+    <ClInclude Include="Kinectar\Guitar.h" />
+    <ClInclude Include="Kinectar\Kinectar.h" />
+    <ClInclude Include="Kinectar\KinectManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
