--- a/KinectarGame/KinectarGame.vcxproj
+++ b/KinectarGame/KinectarGame.vcxproj
@@ -162,6 +162,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bar.cpp" />
+    <ClCompile Include="Base.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Kinectar\Guitar.cpp" />
@@ -169,6 +171,9 @@
     <ClCompile Include="Kinectar\KinectManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Music.cpp" />
+    <ClCompile Include="Note.cpp" />
+    <ClCompile Include="NotesManager.cpp" />
     <ClCompile Include="Title.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -284,6 +289,8 @@
     <Font Include="Example\YomogiFont.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bar.h" />
+    <ClInclude Include="Base.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameData.h" />
     <ClInclude Include="GameManager.h" />
@@ -291,6 +298,10 @@
     <ClInclude Include="Kinectar\Kinectar.h" />
     <ClInclude Include="Kinectar\KinectManager.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Music.h" />
+    <ClInclude Include="Note.h" />
+    <ClInclude Include="NotesManager.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
