--- a/KinectarGame/KinectarGame.vcxproj
+++ b/KinectarGame/KinectarGame.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Music.cpp" />
     <ClCompile Include="Note.cpp" />
     <ClCompile Include="NotesManager.cpp" />
+    <ClCompile Include="Score.cpp" />
     <ClCompile Include="Title.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -302,6 +303,7 @@
     <ClInclude Include="Note.h" />
     <ClInclude Include="NotesManager.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="Score.h" />
     <ClInclude Include="Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
