--- a/KinectarGame/KinectarGame.vcxproj
+++ b/KinectarGame/KinectarGame.vcxproj
@@ -181,14 +181,6 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine\Splash.png" />
-    <Image Include="Example\Brick.jpg" />
-    <Image Include="Example\Earth.jpg" />
-    <Image Include="Example\Grass.jpg" />
-    <Image Include="Example\Ground.jpg" />
-    <Image Include="Example\Particle.png" />
-    <Image Include="Example\Siv3D-kun.png" />
-    <Image Include="Example\Well\Well.jpg" />
-    <Image Include="Example\Windmill.png" />
     <Image Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -253,13 +245,7 @@
     <None Include="Engine\Shaders\D3D11\Sprite.vs" />
     <None Include="Engine\Shaders\D3D11\Sprite_Font.ps" />
     <None Include="Engine\Shaders\D3D11\Sprite_Stencil.ps" />
-    <None Include="Example\Hiragana.model" />
-    <None Include="Example\Prokofiev.mid" />
-    <None Include="Example\Test.csv" />
-    <None Include="Example\Test.ini" />
-    <None Include="Example\Test.json" />
-    <None Include="Example\Well\Well.mtl" />
-    <None Include="Example\Well\Well.wavefrontobj" />
+    <None Include="春中水泳.data" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Engine\dll(x64)\libmpg123\COPYING.txt" />
@@ -267,26 +253,6 @@
     <Text Include="Engine\dll(x86)\libmpg123\COPYING.txt" />
     <Text Include="Engine\dll(x86)\SoundTouch\COPYING.TXT" />
     <Text Include="Engine\LogMessages.txt" />
-    <Text Include="Example\Shaders\Blend2D.hlsl" />
-    <Text Include="Example\Shaders\Invert2D.hlsl" />
-    <Text Include="Example\Shaders\Monochrome2D.hlsl" />
-    <Text Include="Example\Shaders\PoissonDisk2D.hlsl" />
-    <Text Include="Example\Shaders\RGBSplit2D.hlsl" />
-    <Text Include="Example\Shaders\Simple2D.hlsl" />
-    <Text Include="Example\Shaders\Simple3D.hlsl" />
-    <Text Include="Example\Shaders\Simple3DForward.hlsl" />
-    <Text Include="Example\Shaders\Swirl2D.hlsl" />
-    <Text Include="Example\Shaders\Terrain3D.hlsl" />
-    <Text Include="Example\Shaders\Wave2DPointSprites.hlsl" />
-    <Text Include="Example\Test.txt" />
-    <Text Include="Example\素材について.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Media Include="Example\Sound.mp3" />
-    <Media Include="Example\風の丘.mp3" />
-  </ItemGroup>
-  <ItemGroup>
-    <Font Include="Example\YomogiFont.ttf" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bar.h" />
