--- a/KinectarGame/KinectarGame.vcxproj
+++ b/KinectarGame/KinectarGame.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Guitar.cpp" />
+    <ClCompile Include="GuitarString.cpp" />
     <ClCompile Include="Kinectar.cpp" />
     <ClCompile Include="KinectManager.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -260,6 +261,7 @@
     <ClInclude Include="GameData.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Guitar.h" />
+    <ClInclude Include="GuitarString.h" />
     <ClInclude Include="Kinectar.h" />
     <ClInclude Include="KinectManager.h" />
     <ClInclude Include="Menu.h" />
