--- a/KinectarGame/KinectarGame.vcxproj.filters
+++ b/KinectarGame/KinectarGame.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="GuitarString.cpp">
       <Filter>ソース ファイル\Scenes\Game</Filter>
     </ClCompile>
+    <ClCompile Include="HitEffect.cpp">
+      <Filter>ソース ファイル\Scenes\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
@@ -395,6 +398,9 @@
       <Filter>ヘッダー ファイル\Kinectar</Filter>
     </ClInclude>
     <ClInclude Include="GuitarString.h">
+      <Filter>ヘッダー ファイル\Scenes\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="HitEffect.h">
       <Filter>ヘッダー ファイル\Scenes\Game</Filter>
     </ClInclude>
   </ItemGroup>
