--- a/KinectarGame/KinectarGame.vcxproj
+++ b/KinectarGame/KinectarGame.vcxproj
@@ -162,7 +162,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Bar.cpp" />
+    <ClCompile Include="HitMarker.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Guitar.cpp" />
@@ -258,7 +258,7 @@
     <Text Include="Engine\LogMessages.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Bar.h" />
+    <ClInclude Include="HItMarker.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameData.h" />
     <ClInclude Include="GameManager.h" />
