--- a/KinectarGame/KinectarGame.vcxproj.filters
+++ b/KinectarGame/KinectarGame.vcxproj.filters
@@ -114,9 +114,6 @@
     <ClCompile Include="Music.cpp">
       <Filter>ソース ファイル\Scenes\Game</Filter>
     </ClCompile>
-    <ClCompile Include="Bar.cpp">
-      <Filter>ソース ファイル\Scenes\Game</Filter>
-    </ClCompile>
     <ClCompile Include="Score.cpp">
       <Filter>ソース ファイル\Scenes\Game</Filter>
     </ClCompile>
@@ -136,6 +133,9 @@
       <Filter>ソース ファイル\Scenes\Game</Filter>
     </ClCompile>
     <ClCompile Include="PointManager.cpp">
+      <Filter>ソース ファイル\Scenes\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="HitMarker.cpp">
       <Filter>ソース ファイル\Scenes\Game</Filter>
     </ClCompile>
   </ItemGroup>
@@ -385,9 +385,6 @@
     <ClInclude Include="Object.h">
       <Filter>ヘッダー ファイル\misc</Filter>
     </ClInclude>
-    <ClInclude Include="Bar.h">
-      <Filter>ヘッダー ファイル\Scenes\Game</Filter>
-    </ClInclude>
     <ClInclude Include="Score.h">
       <Filter>ヘッダー ファイル\Scenes\Game</Filter>
     </ClInclude>
@@ -407,6 +404,9 @@
       <Filter>ヘッダー ファイル\Scenes\Game</Filter>
     </ClInclude>
     <ClInclude Include="PointManager.h">
+      <Filter>ヘッダー ファイル\Scenes\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="HItMarker.h">
       <Filter>ヘッダー ファイル\Scenes\Game</Filter>
     </ClInclude>
   </ItemGroup>
