--- a/KinectarGame/KinectarGame.vcxproj.filters
+++ b/KinectarGame/KinectarGame.vcxproj.filters
@@ -348,6 +348,9 @@
     <None Include="春中水泳.data">
       <Filter>リソース ファイル</Filter>
     </None>
+    <None Include="PBR飛行計画.data">
+      <Filter>リソース ファイル</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Engine\dll(x64)\libmpg123\COPYING.txt">
